[gdbplugin] show CPU registers for GDB backend.

BUG: 462834

This patch adds a new variable scope for CPU registers
in the GDB backend:

- Unavailable registers are not shown.
- Values are shown using the raw format.